...
    <string name="tx_validation_rule_name_empty">Rule name can not be empty.\nNo saving allowed</string>
    <string name="tx_validation_filter_name_empty">Filter name can not be empty.\nNo saving allowed</string>
    <string name="tx_validation_rule_name_used">Rule name already used.\nNo saving allowed</string>
    <string name="tx_validation_filter_name_used">Filter name already used.\nNo saving allowed</string>
    <string name="tx_validation_rule_valid">The rule is valid.\nSaving allowed</string>
    <string name="tx_validation_filter_valid">The filter is valid.\nSaving allowed</string>
    <string name="tx_rule_delete_confirm">Doy you want to delete this rule?</string>
    <string name="tx_filter_delete_confirm">Doy you want to delete this filter?</string>
    <string name="bt_yes_delete">Yes, delete</string>
    <string name="bt_no_keep">No, keep</string>
    <string name="mn_undo_rule">Undo a change</string>
    <string name="tx_validation_rule_no_changes">No changes yet.\nSaving not allowed</string>
    <string name="tx_validation_rule_has_changed">Rule has changed.\nSaving or undo changes is allowed</string>
...
    <string name="tx_filter_help_title">Help on editing filters</string>
    <string name="tx_actions_help_title">Help on chosing actions</string>
    <string name="tx_main_help_title">Help on PrismaCallBlocker</string>
    <string name="tx_description">Description</string>
    <string name="bt_manage_patterns">Manage Patterns</string>
    <string name="tx_patterns_in_rule">Patterns in rule:\n</string>
    <string name="mn_add_pattern">Add a pattern</string>
    <string name="mn_delete_pattern">Delete selected patterns</string>
    <string name="mn_update_patterns">Update patterns</string>
    <string name="mn_pick_log">Pick from log</string>
    <string name="mn_edit_pattern">Edit a single pattern</string>
    <string name="tx_manage_patterns_help">Manage filter patterns</string>
    <string name="tx_calendar_rule_title">Calendar Rule</string>
...
    <string name="mn_pick_calendar">Pick a calendar rule</string>
    <string name="mn_pick_patterns">Pick a filter rule</string>
    <string name="mn_pick_action">Pick an action</string>
    <string name="mn_edit_calendar">Edit the calendar rule</string>
    <string name="mn_edit_patterns">Edit the filter rule</string>
    <string name="tx_action_class">Action class:</string>
    <string name="msg_can_not_delete_rule">Can\'t delete because rule name is in use in a filter</string>
    <string name="about_title">Prisma Call Blocker by ConteDiMonteCristo</string>
    <string name="about_email">Contact: prismoid01@gmail.com</string>
    <string name="about_version">Version: X.X</string>
    <string name="about_description">Rule based call blocker application</string>
    <string name="ac_about">About</string>
    <string name="pk_exp_rules">export_rules</string>
...
