...
                android:focusable="true"
                android:focusableInTouchMode="true"/>

            <EditText
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:id="@+id/edit_calendar_rule_name"
                android:layout_marginRight="10dp"
                android:layout_gravity="right"
                android:layout_weight="2"
                android:inputType="text" />
        </LinearLayout>

...
                android:layout_weight="1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tx_no_days"
                android:textAllCaps="false"
                android:id="@+id/bt_no_days"
                android:layout_marginLeft="1dp"
                android:onClick="onNoDays"
                android:layout_marginRight="1dp"
                android:layout_weight="1"/>
            <Button
                android:layout_width="wrap_content"
...
