...
        android:orderInCategory="15"
        com.prismaqf.callblocker:showAsAction="never"/>
    <item android:id="@+id/action_delete_pattern"
        android:title="@string/mn_delete_pattern"
        android:orderInCategory="20"
        com.prismaqf.callblocker:showAsAction="never"/>
    <item android:id="@+id/action_update_patterns"
        android:title="@string/mn_update_patterns"
        android:icon="@drawable/ic_save_circle"
        android:orderInCategory="30"
        com.prismaqf.callblocker:showAsAction="ifRoom"/>
    <item android:id="@+id/action_help_patterns"
        android:title="@string/mn_help"
...
